Fixing Responsivness on mobile

--- a/index.css
+++ b/index.css
@@ -86,6 +86,14 @@ background-color: black;
     }
 }
 
+@media (max-width: 460px) {
+    .header-text {
+        font-size: 12px;
+        font-weight: 50;
+        line-height: 10px;
+    }
+}
+
 /* ==================================================================================================================== */
 /* 1st Page */
 .main-content{
@@ -536,8 +544,13 @@ background-color: black;
 }
 
 .graph{
-    height:auto;
     padding-left: 15px;
+}
+
+@media (max-width: 340px) {
+    .graph {
+    height: 30%;
+    }
 }
 
 .graph:hover{
@@ -550,7 +563,6 @@ background-color: black;
     align-items: center;
     gap: 15px;
 }
-
 
 .container4{
     max-width: 100%;
